--- a/index.html
+++ b/index.html
@@ -56,3 +56,23 @@
     </script>
 </body>
 </html>
+const left = document.getElementById('left');
+const right = document.getElementById('right');
+
+// Функция для левой колонки
+left.onscroll = () => {
+    const maxScroll = left.scrollHeight - left.clientHeight;
+    right.scrollTop = maxScroll - left.scrollTop;
+};
+
+// Функция для правой колонки (теперь и она управляет левой)
+right.onscroll = () => {
+    const maxScroll = right.scrollHeight - right.clientHeight;
+    left.scrollTop = maxScroll - right.scrollTop;
+};
+
+window.onload = () => {
+    setTimeout(() => {
+        right.scrollTop = right.scrollHeight;
+    }, 100);
+};
