--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         
         .item a { display: block; width: 100%; }
     </style>
+    .item img {
+    width: 100%;
+    height: 1296px; /* Установите нужную вам высоту */
+    object-fit: cover; /* Это самое важное: картинка заполнит блок, не растягиваясь */
+    display: block;
+}
 </head>
 <body>
 
