--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         /* Подключение вашего шрифта */
         @font-face {
             font-family: 'PP Neue Montreal';
-            src: url('PPNeueMontreal-Regular.woff2') format('woff2'); /* Убедитесь, что имя файла совпадает */
+            src: url('PPNeueMontreal-Regular.woff2.ttf') format('ttf'); /* Убедитесь, что имя файла совпадает */
             font-weight: normal;
             font-style: normal;
         }
