--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 
     <div id="left" class="column">
-        <div class="item"><img src="work1.png"></div>
+       <div class="item"><a href="project1.html"><img src="work1.png"></a></div>
         <div class="item"><img src="work3.png"></div>
         <div class="item"><img src="work5.png"></div>
         <div class="item"><img src="work7.png"></div>
@@ -69,7 +69,7 @@
         <div class="item"><img src="work8.png"></div>
         <div class="item"><img src="work6.png"></div>
         <div class="item"><img src="work4.png"></div>
-        <div class="item"><img src="work2.png"></div>
+        <div class="item"><a href="project1.html"><img src="work2.png"></a></div>
     </div>
 
     <script>
