--- a/project1.html
+++ b/project1.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Simplie Hair | Lisa Voronov</title>
     <style>
+            /* Подключаем ваш шрифт */
+        @font-face {
+            font-family: 'Notbad-sans-Regular';
+            src: url('Notbad-sans-Regular.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+            line-height: 40px;
+        }
         body { 
             margin: 0; 
             display: flex; 
